modified:   build/css/main.css 	new file:   build/img/advantages/cup.png 	new file:   build/img/consultation/bg.jpg 	modified:   build/index.html 	modified:   docs/css/main.css 	new file:   docs/img/advantages/cup.png 	new file:   docs/img/advantages/cup.webp 	new file:   docs/img/consultation/bg.jpg 	new file:   docs/img/consultation/bg.webp 	modified:   docs/index.html 	modified:   src/html/blocks/header.html 	modified:   src/html/index.html 	new file:   src/img/advantages/cup.png 	new file:   src/img/consultation/bg.jpg 	new file:   src/scss/blocks/_forms.scss 	modified:   src/scss/blocks/_header.scss 	modified:   src/scss/main.scss

--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
 
-                <div class="consultation">
+                <div class="consultation-wrapper">
                     <button class="btn">Заказать консультацию</button>
                     <p class="text">или <a class="link" href="#">перейти в каталог</a></p>
                 </div>
