modified:   .gitignore 	modified:   build/css/main.css 	modified:   build/index.html 	modified:   build/js/index.js 	deleted:    package-lock.json 	modified:   src/html/index.html 	modified:   src/js/index.js

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,7 +42,7 @@
 	<link rel="preload" href="./fonts/subset-MuseoModerno-Bold.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="./fonts/fonts.css" media="print" onload="this.media='all'" />
 
-	<!-- Inline fonts in base64 -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 	<link rel="stylesheet" href="./css/main.css" />
 </head>
 
@@ -91,9 +91,18 @@
 			</div>
 		</section>
 
+
+		<section class="">
+			<div class="my-slider">
+				<div><img src="./img" alt=""></div>
+				<div></div>
+				<div></div>
+			</div>
+		</section>
 	</main>
 	@@include('blocks/footer.html')
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 	<script src="./js/index.js"></script>
 </body>
 
